--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,11 +5,15 @@
     <title>Stream Support</title>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
-    {% set script_files = [] %}
 
     {% for file in style_files %}
     <link rel="stylesheet" href="{{ file }}">
     {% endfor %}
+
+    <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
 
     {% for file in script_files %}
     <script src="{{ file }}"></script>
