--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -1,17 +1,24 @@
 {% extends 'base.html' %}
-{% set style_files = [url_for('static', filename='css/parts/form.css')] %}
+{% set style_files = [url_for('static', filename='css/parts/form.css'), url_for('static', filename='css/register.css')] %}
+{% set script_files = [url_for('static', filename='js/thumbnail.js')] %}
 {% block content %}
 
 <div>
     <form class="register-form form" method="post" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
-        {% for element in form.content %}
-        <div class="input-item">
-            {{ element.label }}
-            {{ element() }}
+        <div class="left-item">
+            {% for element in form.content %}
+            <div class="input-item">
+                {{ element.label }}
+                {{ element() }}
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
-
+        <div class="right-item">
+            <img id="preload" src="/static/img/icons/other/user.svg" class="img-thumbnail">
+            {{ form.photo.label }}
+            {{ form.photo() }}
+        </div>
         <div class="confirm-item" id="submit">
             {{ form.submit() }}
             <input type="button" onclick="history.back();" class="btn btn-primary" value="Cancel"/>
