--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div>
-    <form class="login-form form" method="post" enctype="multipart/form-data">
+    <form class="login-form form content" method="post" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         {% for element in form.content %}
         <div class="input-item">
