--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -13,7 +13,6 @@ body{
     font-family: 'test';
 }
 
-
 .container{
     word-wrap: break-word;
     box-sizing: border-box;
@@ -21,6 +20,23 @@ body{
     margin: 0 auto;
     margin-top: 5pt;
     text-align: center;
+}
+
+.content{
+    max-width: -webkit-fill-available;
+    border: solid black 2px;
+    padding: 2pt;
+    border-radius: 15px 15px 8px 8px;
+    background-color: #ffffff;
+    float: right;
+}
+
+.left-item, .right-item{
+    float: left;
+    width: 50%;
+}
+.right-item{
+    text-align: right;
 }
 
 #navbar ul{
