--- a/app/templates/user/signup.html
+++ b/app/templates/user/signup.html
@@ -11,6 +11,9 @@
             <div class="input-item">
                 {{ element.label }}
                 {{ element() }}
+                {% for error in element.errors %}
+                    <p class="error">{{ error }}</p>
+                {% endfor %}
             </div>
             {% endfor %}
         </div>
