fix + template for links and avatar

--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -13,7 +13,7 @@
 <div class="content">
     <div class="left-item" style="width: 40%">
         <img class="avatar" src="{{ photo_url }}">
-        <a href="/edit">change details</a>
+        <a style="display: block;" href="/edit">change details</a>
     </div>
     <div class="right-item">
         <p>username: {{ user['username'] }}</p>
