--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,10 +10,15 @@
     <link rel="stylesheet" href="{{ file }}">
     {% endfor %}
 
+    <link rel="stylesheet" type="text/css"
+          href="//cdnjs.cloudflare.com/ajax/libs/jquery-jgrowl/1.4.7/jquery.jgrowl.min.css"/>
+
     <script
             src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
             crossorigin="anonymous"></script>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-jgrowl/1.4.7/jquery.jgrowl.min.js"></script>
 
     {% for file in script_files %}
     <script src="{{ file }}"></script>
