--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,16 +27,16 @@
 </head>
 <body>
 <ul id="navbar">
-    <li><a href="#">Главная</a></li>
-    <li><a href="#">Новости</a></li>
-    <li><a href="#">Контакты</a>
-        <ul>
-            <li><a href="#">Адрес</a></li>
-            <li><a href="#">Телефон</a></li>
-            <li><a href="#">Email</a></li>
-        </ul>
-    </li>
-    <li><a href="#">О нас</a></li>
+    <li><a href="/">Главная</a></li>
+    {% if current_user %}
+    <li><a href="/profile/{{ current_user['username'] }}">{{ current_user['username'] }}</a></li>
+    {% else %}
+    <li><a href="/signup">Зарегестрироваться</a></li>
+    <li><a href="/login">Войти</a></li>
+    {% endif %}
+    {% if current_user %}
+    <li style="float: right;"><a href="/logout">Выйти</a></li>
+    {% endif %}
 </ul>
 <main class="container">
     {% block content %}
