--- a/app/templates/support.html
+++ b/app/templates/support.html
@@ -21,15 +21,15 @@
         <div class="item-group">
             <p>actions</p>
             <button class="action-creeper" value="{{ user['username'] }}">
-                <img class="item-image" src="{{url_for('static', filename=('img/item-images/dop/Creeper.png') }}">
+                <img class="item-image" src="{{url_for('static', filename='img/item-images/dop/Creeper.png') }}">
             500
             </button>
             <button class="action-web" value="{{ user['username'] }}">
-                <img class="item-image" src="{{url_for('static', filename=('img/item-images/dop/Cobweb.png') }}">
+                <img class="item-image" src="{{url_for('static', filename='img/item-images/dop/Cobweb.png') }}">
             200
             </button>
             <button class="action-sand" value="{{ user['username'] }}">
-                <img class="item-image" src="{{url_for('static', filename=('img/item-images/dop/Sand.png') }}">
+                <img class="item-image" src="{{url_for('static', filename='img/item-images/dop/Sand.png') }}">
             30
             </button>
         </div>
